# ROS2_launch_args

./: README.md  blog2.md
pass_arg_test/: CMakeLists.txt  package.xml
pass_arg_test/launch/: 1.launch.py  1.py  2.launch.py  2.py  3.launch.py  4.launch.py  5.launch.py
